--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
             "email": "chenjiangtao@heifan.cn"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "opensearch": "/"
+        }
+    }
 }
